[package]
name = "injective-image-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.17"
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
reqwest = "0.11.12"
image = "0.24.4"
urlencoding = "2.1.2"
webp = "0.2.2"
anyhow = "1.0.66"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
http-body = "0.4.5"
include_dir = "0.7.3"