[package]
name = "injective-image-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
reqwest = "0.11.12"
image = "0.24.4"
webp = "0.2.2"
anyhow = "1.0.66"
actix-files = "0.6.2"
md5 = "0.7.0"
dotenv = "0.15.0"